crates/rulesteward-fapolicyd/tests/snapshots/fapd-E07__int-set-on-exe.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E07] sev=Error line=4 col=7 span=168..174 :: set `%t` is type-incompatible with `exe=` (expects a string) on every supported fapolicyd version
