crates/rulesteward-fapolicyd/tests/snapshots/fapd-E07__int-set-on-path-object.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E07] sev=Error line=5 col=13 span=229..236 :: set `%t` is type-incompatible with `path=` (expects a string) on every supported fapolicyd version
