crates/rulesteward-fapolicyd/tests/snapshots/fapd-E07__int-set-on-pid.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E07] sev=Error line=4 col=7 span=167..173 :: set `%t` is type-incompatible with `pid=` (expects a signed integer) on every supported fapolicyd version
