crates/rulesteward-fapolicyd/tests/snapshots/fapd-E07__string-set-on-sessionid.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E07] sev=Error line=4 col=7 span=169..181 :: set `%t` is type-incompatible with `sessionid=` (expects an unsigned integer) on every supported fapolicyd version
